--- a/views/clients/addTransact.handlebars
+++ b/views/clients/addTransact.handlebars
@@ -38,6 +38,14 @@
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
+            <div class="col-sm-4">
+                <div class="form-group">
+                    <label for="form_control">Service Date</label>
+                    <input id="form_control" type="date" name="transactDate" required="required" class="form-control"
+                        data-error="Enter service date" placeholder="mm-DD-yyyy">
+                    <div class="help-block with-errors"></div>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-sm-4">
