--- a/views/clients/viewClient.handlebars
+++ b/views/clients/viewClient.handlebars
@@ -1,7 +1,15 @@
 
-<p>Search Client Database</p>
-<form action="searchClient"><input type="text"id="searchbar"placeholder="Search by first or last name"
-  class="form-control"onkeyup="search()" ></form>
+<div class="header">
+  <h3>View Clients</h3>
+</div>
+<div>
+<form class="form-inline" action="searchClient">
+  <input type="text" id="searchbar"placeholder="Search by first or last name"
+  class="form-control"onkeyup="search()" >
+  <input type='submit' id="btn" value="Search" class='btn btn-secondary' />
+  </form>
+  <br/>
+</div>
 
 
 
@@ -11,7 +19,7 @@
       <th scope="col">First Name</th>
       <th scope="col">Last Name</th>
       <th scope="col">Phone Number</th>
-      <th scope="col"colspan='2'><center>Options</center></th>
+      <th scope="col" colspan='2'><center>Options</center></th>
     </tr>
   </thead>
   <tbody>
@@ -23,7 +31,7 @@
       <td label="Phone Number"><input type="text" value={{phoneNumber}} class="form-control"name="phoneNumber" readonly="true"></td>
       <td>
         
-          <input type='submit' class='btn btn-secondary' />
+          <input id="sub" type='submit' value="New Transaction" class='btn btn-secondary' />
         
       </td>
       
@@ -53,13 +61,19 @@
   */
 </script>
 <style>
+.header{
+  text-align: center;
+}
 /*Mobile View*/
-@media  only screen and  (max-width: 760px)  {
-  
+@media  only screen and (max-width: 760px)  {
+  .form-inline {
+    flex-direction: column;
+    align-items: stretch;
+  }
   td, tr :not(form) { display: block; }
   
   /* Hide table headers (but not display: none;, for accessibility) */
-  
+
   thead tr {
     position: absolute;
     top: -9999px;
@@ -86,6 +100,13 @@
     width: 100%;
     white-space: nowrap;
   }
-
+  #sub{
+      display: block;
+      width: 100%;
+    }
+  #btn, #searchbar
+  {
+    vertical-align: middle;
+  }
   }
 </style>
