--- a/views/clients/holdPage.handlebars
+++ b/views/clients/holdPage.handlebars
@@ -1,3 +1,39 @@
+ALL DEPRICATED CODE STORED HERE
+
+<header>
+            <nav>
+               <div class="menu-icon">
+                  <i class="fa fa-bars fa-2x"></i>
+               </div>
+               
+               <div class="menu">
+                        <div class="logo">
+                              <a  href="/">KYGM Services</a>
+                        </div>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <ul>
+                     <li><a class="nav-link" href="/">Home </a></li>
+                     <li><a class="nav-link" href="/about">About</a></li>
+                     <li class="nav-item dropdown  ml-auto drpdwn">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenu">Actions</a>
+                        <div class="dropdown-menu">
+                              <a href="/clients/viewClient" class="dropdown-item">View Clients</a>
+                              <a href="/clients/addClient" class="dropdown-item">Add Clients</a>
+                              <a href="/clients/viewClient" class="dropdown-item">Add Transaction</a>
+                              <a href="/clients/viewTransact" class="dropdown-item">View Transaction</a>
+                        </div>
+                    </li>        
+                  </ul>
+               </div>
+            </nav>
+</header>
+
+
+
+
 <div class="container-fluid bg-light py-3">
   <div class="row">
     <div class="col-md-6 mx-auto">
