--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,34 +1,29 @@
-<header>
-            <nav>
-               <div class="menu-icon">
-                  <i class="fa fa-bars fa-2x"></i>
-               </div>
-               
-               <div class="menu">
-                        <div class="logo">
-                              <a  href="/">KYGM Services</a>
-                        </div>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <ul>
-                     <li><a class="nav-link" href="/">Home </a></li>
-                     <li><a class="nav-link" href="/about">About</a></li>
-                     <li class="nav-item dropdown  ml-auto drpdwn">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenu">Actions</a>
-                        <div class="dropdown-menu">
-                              <a href="/clients/viewClient" class="dropdown-item">View Clients</a>
-                              <a href="/clients/addClient" class="dropdown-item">Add Clients</a>
-                              <a href="/clients/viewClient" class="dropdown-item">Add Transaction</a>
-                              <a href="/clients/viewTransact" class="dropdown-item">View Transaction</a>
-                        </div>
-                    </li>        
-                  </ul>
-               </div>
-            </nav>
-</header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">KYGM Services</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                  <li class="nav-item active">
+                        <a class="nav-link" href="/clients/addClient">Add Clients <span
+                                    class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                        <a class="nav-link" href="/clients/viewClient">View Clients</a>
+                  </li>
+                  <li class="nav-item">
+                        <a class="nav-link" href="/clients/viewTransact">View Transactions</a>
+                  </li>
+            </ul>
+      </div>
+</nav>
+
 <style>
+      /*
+
+      FIX THIS FIRST BEFORE PUSHING AGAIN
 html, body {
       margin: 0;
       padding: 0;
@@ -91,16 +86,16 @@ nav ul li {
 }
 </style>
 <script>
-   $(document).ready(function() {
-            $(".menu-icon").on("click", function() {
+      $(document).ready(function () {
+            $(".menu-icon").on("click", function () {
                   $("nav ul").toggleClass("showing");
             });
       });
 
       // Scrolling Effect
 
-      $(window).on("scroll", function() {
-            if($(window).scrollTop()) {
+      $(window).on("scroll", function () {
+            if ($(window).scrollTop()) {
                   $('nav').addClass('black');
             }
 
@@ -108,4 +103,5 @@ nav ul li {
                   $('nav').removeClass('black');
             }
       })
+      /*
 </script>
