--- a/views/clients/viewTransact.handlebars
+++ b/views/clients/viewTransact.handlebars
@@ -44,7 +44,7 @@
 </table>
 <style>
   .hidden{
-    display:none;
+    display:block;
   }
 /*Mobile View*/
 @media  only screen and  (max-width: 760px)  {
