--- a/views/clients/viewTransact.handlebars
+++ b/views/clients/viewTransact.handlebars
@@ -39,7 +39,7 @@
   </thead>
     </tr>
     <tr id="transDetails{{phoneNumber}}"class="collapse">
-      <td label="Time"><input type="time" value="{{transactTime}}" class="form-control"name="Time" readonly="true"></td>
+      <td label="Time"><input type="text" value="{{transactTime}} Hours" class="form-control"name="Time" readonly="true"></td>
       <td label="Phone"><input type="text" value="{{phoneNumber}}" class="form-control"name="phone" readonly="true"></td>
       <td label="Cost"><input type="text" value="${{transactCost}}" class="form-control"name="Cost" readonly="true"></td>
       <td label="Description"><input value="{{descript}}" class="form-control"name="description" readonly="true"></textarea></td>
