--- a/views/clients/viewTransact.handlebars
+++ b/views/clients/viewTransact.handlebars
@@ -128,3 +128,19 @@
     }
   }
 </style>
+
+<script>
+  /*
+FOR KENNY REF
+  const app = 
+  window.alert("Are you sure that you would \n like to delete item {{transactDate}} {{firstName}}");
+  if(window.alert.cancel)
+  {
+    app.restart;
+  }
+  else
+  {
+    return;
+  }
+  */
+</script>
