--- a/views/clients/viewClient.handlebars
+++ b/views/clients/viewClient.handlebars
@@ -1,7 +1,9 @@
 
 <div class="header">
   <h3>View Clients</h3>
+    <a href="./viewClient"><input id="btn" name="btn" value="View all Clients" class='btn btn-primary' /></a>
 </div>
+<br/>
 <div>
 <form class="form-inline" method="post" action="viewClient">
   <input type="text" id="searchbar"placeholder="Search by first or last name"
