--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -17,6 +17,9 @@
                   <li class="nav-item">
                         <a class="nav-link" href="/clients/viewTransact">View Transactions</a>
                   </li>
+                  <li class="nav-item">
+                        <a class="nav-link" href="/about">About</a>
+                  </li>
             </ul>
       </div>
 </nav>
