--- a/views/clients/viewTransact.handlebars
+++ b/views/clients/viewTransact.handlebars
@@ -25,29 +25,29 @@
       <td label="Service Price"><input type="text" value="${{transactPrice}}" class="form-control" name="transactPrice" readonly="true">
       </td>
       <td><nav>
-        <button class="navbar-toggler btn-dark" type="button" data-toggle="collapse" data-target="#transDetails{{phoneNumber}}" 
-        aria-controls="transDetails{{phoneNumber}}" aria-expanded="false">View Details</button>
+        <button class="navbar-toggler btn-dark" type="button" data-toggle="collapse" data-target="#transDetails{{phoneNumber}}{{transactDate}}{{transactName}}" 
+        aria-controls="transDetails{{phoneNumber}}{{transactDate}}{{transactName}}" aria-expanded="false">View Details</button>
       </nav></td>
-    <thead id="transDetails{{phoneNumber}}"class="collapse">
+    <thead id="transDetails{{phoneNumber}}{{transactDate}}{{transactName}}"class="collapse">
     <tr>
       <th scope="col">Time</th>
       <th scope="col">Phone</th>
       <th scope="col">Cost</th>
       <th scope="col">Description</th>
-      <th scope="col"><button onclick=editFields({{dateEntered}}) class="btn btn-warning">Edit</button></th>
+      <th scope="col"><button onclick=editFields({{phoneNumber}}{{transactDate}}{{transactName}}) class="btn btn-warning">Edit</button></th>
     </tr>
   </thead>
     </tr>
-    <tr id="transDetails{{+}}"class="collapse">
+    <tr id="transDetails{{phoneNumber}}{{transactDate}}{{transactName}}"class="collapse">
       <td label="Time"><input type="text" value="{{transactTime}} Hours" class="form-control"name="Time" readonly='true'></td>
       <td label="Phone"><input type="text" value="{{phoneNumber}}" class="form-control"name="phone" readonly="true"></td>
       <td label="Cost"><input type="text" value="${{transactCost}}" class="form-control"name="Cost" readonly="true"></td>
       <td label="Description"><input value="{{descript}}" class="form-control"name="description" readonly="true"></textarea></td>
-      <td class="disp"id="delete{{dateEntered}}"><form action="../clients/{{dateEntered}}?_method=DELETE"method="post">
-        <button class="btn btn-danger"type="submit"value="{{dateEntered}}">Delete</button>
+      <td class="disp"id="delete{{phoneNumber}}{{transactDate}}{{transactName}}"><form action="../clients/{{phoneNumber}}{{transactDate}}{{transactName}}?_method=DELETE"method="post">
+        <button class="btn btn-danger"type="submit"value="{{phoneNumber}}{{transactDate}}{{transactName}}">Delete</button>
       </form></td>
-      <td class="hidden"id="enterEdit{{dateEntered}}">
-        <button type="submit"value="{{dateEntered}}">Submit</button>
+      <td class="hidden"id="enterEdit{{phoneNumber}}{{transactDate}}{{transactName}}">
+        <button type="submit"value="{{phoneNumber}}{{transactDate}}{{transactName}}">Submit</button>
       </td></form>
     </tr>
   </tbody>
