--- a/views/clients/editClient.handlebars
+++ b/views/clients/editClient.handlebars
@@ -1,3 +1,8 @@
+<div class="header">
+  <h3>Edit Client</h3>
+    <a href="./viewClient"><input id="btn" name="btn" value="View all Clients" class='btn btn-primary' /></a>
+</div>
+<br/>
 {{#each clients}}
 <table class="table">
   <thead>
@@ -9,13 +14,17 @@
     </tr>
   </thead>
   <tbody>
-    <form method="post" action="addTransact">
+    <form method="post" action="editClient">
     <tr>
-      <td label="First Name"><input type="text" value="{{fname}}" class="form-control"name="fname"></td>
-      <td label="Last Name"><input type="text" value="{{lname}}" class="form-control"name="lname"></td>
-      <td label="Phone Number"><input type="text" value="{{phoneNumber}}" class="form-control"name="phoneNumber"></td>
+      <td label="First Name"><input type="text" value="{{fname}}" class="form-control" name="fname"></td>
+      <td label="Last Name"><input type="text" value="{{lname}}" class="form-control" name="lname"></td>
+      <td label="Phone Number"><input type="text" value="{{phoneNumber}}" class="form-control" name="phoneNumber"></td>
+      <td label="City"><input type="text" value="{{city}}" class="form-control" name="city"></td>
+      <td label="State"><input type="text" value="{{state}}" class="form-control" name="state"></td>
+      <td label="Address"><input type="text" value="{{address}}" class="form-control" name="address"></td>
+      <td label="Description"><input type="text" value="{{descript}}" class="form-control" name="descript"></td>
       <td>         
-          <form action="viewClient" method="post"></form><input id="sub2" type="submit" value="Complete Edit" class='btn btn-success' /></form>
+          <input id="sub2" name="doEdit" type="submit" value="Complete Edit" class='btn btn-success' /></form>
       </td>  
     </tr>
     
