--- a/views/clients/viewTransact.handlebars
+++ b/views/clients/viewTransact.handlebars
@@ -133,10 +133,10 @@
   }
 </style>
 <script>
-  function editFields(dateEntered){
-    if(document.getElementById("delete"+dateEntered).style.display=="block"){
-      document.getElementById("delete"+dateEntered).style.display="none";
-      document.getElementById("enterEdit"+dateEntered).style.display="block";
+  function editFields(key){
+    if(document.getElementById("delete"+key).style.display=="block"){
+      document.getElementById("delete"+key).style.display="none";
+      document.getElementById("enterEdit"+key).style.display="block";
     }
     
   }
