--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,9 +22,9 @@
       <td style="width:50%;height:20%">
         <div name="Add Clients"class="card">
           <a href="/clients/addClient">
-            <img class="card-img mx-auto d-block" src="./images/AddClient.png" 
+            <img class="card-img mx-auto d-block" src="https://www.flaticon.com/svg/vstatic/svg/166/166260.svg?token=exp=1613883793~hmac=3c6be35bda80b84621c1777b76fca2ad" 
             style="width:70%;height:250px">
-            {{!-- https://www.flaticon.com/svg/vstatic/svg/166/166260.svg?token=exp=1613680660~hmac=a165bcf5bebe2404ddc1fc207196f6c9 --}}
+            {{!-- https://www.flaticon.com/svg/vstatic/svg/166/166260.svg?token=exp=1613883793~hmac=3c6be35bda80b84621c1777b76fca2ad --}}
             <div class="card-img-overlay">
               <p class="btn btn-secondary btn-block">Add Clients</p>
             </div>
