--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
         <div name="Add Clients" class="card">
           <a href="/clients/addClient">
             <img class="card-img mx-auto d-block"
-              src="https://www.flaticon.com/svg/vstatic/svg/166/166260.svg?token=exp=1613883793~hmac=3c6be35bda80b84621c1777b76fca2ad"
+              src="https://image.flaticon.com/icons/png/512/166/166260.png"
               style="width:70%;height:250px">
             {{!--
             https://www.flaticon.com/svg/vstatic/svg/166/166260.svg?token=exp=1613883793~hmac=3c6be35bda80b84621c1777b76fca2ad
