--- a/views/clients/viewClient.handlebars
+++ b/views/clients/viewClient.handlebars
@@ -6,7 +6,7 @@
 <br/>
 <div>
 <form class="form-inline" method="post" action="viewClient">
-  <input type="text" id="searchbar"placeholder="Search by first or last name"
+  <input type="text" id="searchbar"placeholder="Search by First Name"
   class="form-control" name="search">
   <input type='submit' id="btn" name="btn" value="Search" class='btn btn-secondary' />
   </form>
